; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_misc.c_ar5210EnableRfKill.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_misc.c_ar5210EnableRfKill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }
%struct.TYPE_2__ = type { i32 }

@AR_EEPROM_RFSILENT_GPIO_SEL = common dso_local global i32 0, align 4
@AR_EEPROM_RFSILENT_POLARITY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar5210EnableRfKill(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %6 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %7 = call %struct.TYPE_2__* @AH_PRIVATE(%struct.ath_hal* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @AR_EEPROM_RFSILENT_GPIO_SEL, align 4
  %12 = call i32 @MS(i32 %10, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @AR_EEPROM_RFSILENT_POLARITY, align 4
  %15 = call i32 @MS(i32 %13, i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @ar5210GpioGet(%struct.ath_hal* %18, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = icmp eq i32 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @ar5210Gpio0SetIntr(%struct.ath_hal* %16, i32 %17, i32 %23)
  ret void
}

declare dso_local %struct.TYPE_2__* @AH_PRIVATE(%struct.ath_hal*) #1

declare dso_local i32 @MS(i32, i32) #1

declare dso_local i32 @ar5210Gpio0SetIntr(%struct.ath_hal*, i32, i32) #1

declare dso_local i32 @ar5210GpioGet(%struct.ath_hal*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
